# flowcontent-auto

./: .gitignore  CHAVES_DE_ACESSO.txt  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
capcut/: export_draft.py
core/: dispatch-policy.mjs  production-pipeline.mjs  project-hydration.mjs  project-registry.mjs  srt.mjs  storyboard.mjs
docs/: architecture.md  auto-update.md  data-model.md  dispatcher.md  flow-responsiveness.md  legacy-refactor-plan.md  observed-flow-contract.md
extension/: background.js  content.js  manifest.json  page_bridge.js
share-release/FlowContent-Auto-0.1.0/FlowContent-final/: token-inicial.txt
share-release/FlowContent-Auto-0.1.0/FlowContent-final/flow-bridge-extension/: content.js
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: update-config.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppViews.tsx  Sidebar.tsx
src/hooks/: useAppController.ts
src/lib/: app-state.ts  desktop.ts  diagnostics.ts
srt/: flowcontent_srt.py  segmenter.py  test_segmenter.py
tests/: dispatch-policy.test.mjs  extension-content.test.mjs  production-pipeline.test.mjs  project-hydration.test.mjs  project-registry.test.mjs  srt.test.mjs  storyboard.test.mjs
tools/: analyze-flow-trace.mjs  flow-recorder.mjs  generate-updater-manifest.mjs  reset-flowcontent-user.bat  test-monitor.mjs  test-report.mjs  watch-diagnostics.mjs
(+1 files in other folders)
