[package]
name = "flowcontent-auto"
version = "0.1.7"
description = "FlowContent Auto desktop application"
authors = ["FlowContent Auto"]
edition = "2021"

[lib]
name = "flowcontent_auto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
time = "=0.3.47"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
tauri-plugin-updater = "2.10.1"
url = "2"
